# wordle-benchmark

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: build.yml
backend/: .env.example  README.md  fetch_wordle_solution.py  pyproject.toml
backend/llm_integration/: llm_client.py  openai_client.py  openrouter_client.py
backend/tests/: conftest.py  test_llm_client.py  test_response_parser.py  test_word_list.py  test_wordle_logic.py  wordle_tests.py
backend/wordle/: WordList.py  enums.py  prompt_templates.py  response_parser.py  wordle_game.py
docker/frontend/: Dockerfile
docker/game-engine/: Dockerfile  entrypoint.sh
frontend/: .prettierrc.js  eslint.config.mjs  package-lock.json  package.json
game-engine/: .env.example  README.md  pyproject.toml
game-engine/alembic/: env.py
game-engine/alembic/versions/: 27f9b6140e48_initial_schema_with_all_tables_and_.py
game-engine/src/api/: __init__.py  main.py  schemas.py
game-engine/src/database/: __init__.py  config.py  models.py  schema.py  service.py
game-engine/src/llm_integration/: llm_client.py  openrouter_client.py  pricing.py
game-engine/src/utils/: __init__.py  logging_config.py
game-engine/src/wordle/: dtos.py  enums.py  game_runner.py  models.py  prompt_templates.py  response_parser.py  word_list.py  wordle_game.py
game-engine/src/wordle/resources/: wordle-valid-words.txt
game-engine/tests/: conftest.py  test_game_runner.py  test_llm_openrouter_client.py  test_models.py  test_pricing.py  test_prompt_templates.py  test_response_parser.py  test_word_list.py  test_wordle_logic.py
game-engine/tests/integration/: test_database_service.py  test_game_runner_integration.py  test_llm_client_integration.py
(+19 files in other folders)
