[project]
name = "wordle-benchmark"
version = "0.1.0-dev"
description = "Testing LLM performance with Wordle"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "pytz>=2025.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.12.0",
    "testcontainers[postgres]>=4.0.0",
    "psycopg[binary]>=3.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests",
    "api_calls: mark tests that make real API calls (expensive)"
]

[tool.ruff]
target-version = "py312"
line-length = 120
# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "C90"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["wordle", "llm_integration", "utils"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
